--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -242,7 +242,11 @@
     <ClInclude Include="Stream\MemoryStreamBuf.h" />
     <ClInclude Include="Stream\UnbufferedStreamBuf.h" />
     <ClInclude Include="Template\TAny.h" />
+    <ClInclude Include="Template\TMeta.h" />
     <ClInclude Include="Template\TNull.h" />
+    <ClInclude Include="Template\TTypeList.h" />
+    <ClInclude Include="Template\Tuple.h" />
+    <ClInclude Include="Template\TupleImpl.h" />
     <ClInclude Include="Template\TVoid.h" />
     <ClInclude Include="Thread\ActiveDispatcher.h" />
     <ClInclude Include="Thread\ActiveResult.h" />
