--- a/work/okeyLib/okeyLib.vcxproj.filters
+++ b/work/okeyLib/okeyLib.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClCompile Include="Notifications\AbstractObserver.cpp">
       <Filter>Notifications</Filter>
     </ClCompile>
+    <ClCompile Include="NetWork\EpollReactor.cpp">
+      <Filter>NetWork\socket</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tinyxml\tinyxml.h">
@@ -643,6 +646,18 @@
     </ClInclude>
     <ClInclude Include="Events\PriorityDelegate.h">
       <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="Events\EventHandler.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="Events\EventProactor.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="Events\EventReactor.h">
+      <Filter>Events</Filter>
+    </ClInclude>
+    <ClInclude Include="NetWork\EpollReactor.h">
+      <Filter>NetWork\socket</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
