--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -115,14 +115,15 @@
     <ClCompile Include="inc\UtilID.cpp" />
     <ClCompile Include="log\LogChannel.cpp" />
     <ClCompile Include="log\Logger.cpp" />
+    <ClCompile Include="NetWork\Acceptor.cpp" />
     <ClCompile Include="NetWork\CompleteOperation.cpp" />
     <ClCompile Include="NetWork\EpollReactor.cpp" />
+    <ClCompile Include="NetWork\IOCPProactor.cpp" />
     <ClCompile Include="NetWork\IOCPReactor.cpp" />
     <ClCompile Include="NetWork\Packet.cpp" />
     <ClCompile Include="NetWork\PacketList.cpp" />
+    <ClCompile Include="NetWork\SessionBase.cpp" />
     <ClCompile Include="NetWork\Socket.cpp" />
-    <ClCompile Include="NetWork\SocketBase.cpp" />
-    <ClCompile Include="NetWork\SocketOps.cpp" />
     <ClCompile Include="Notifications\Notification.cpp" />
     <ClCompile Include="Notifications\NotificationCenter.cpp" />
     <ClCompile Include="Notifications\NotificationQueue.cpp" />
@@ -237,18 +238,19 @@
     <ClInclude Include="inc\XML.h" />
     <ClInclude Include="log\LogChannel.h" />
     <ClInclude Include="log\Logger.h" />
+    <ClInclude Include="NetWork\Acceptor.h" />
     <ClInclude Include="NetWork\AcceptType.h" />
     <ClInclude Include="NetWork\CompleteOperation.h" />
     <ClInclude Include="NetWork\EpollReactor.h" />
+    <ClInclude Include="NetWork\IOCPProactor.h" />
     <ClInclude Include="NetWork\IOCPReactor.h" />
-    <ClInclude Include="NetWork\NetManagerBase.h" />
     <ClInclude Include="NetWork\NetReactor.h" />
+    <ClInclude Include="NetWork\NetServiceBase.h" />
     <ClInclude Include="NetWork\Packet.h" />
     <ClInclude Include="NetWork\PacketFunction.h" />
     <ClInclude Include="NetWork\PacketList.h" />
+    <ClInclude Include="NetWork\SessionBase.h" />
     <ClInclude Include="NetWork\Socket.h" />
-    <ClInclude Include="NetWork\SocketBase.h" />
-    <ClInclude Include="NetWork\SocketOps.h" />
     <ClInclude Include="Notifications\Notification.h" />
     <ClInclude Include="Notifications\NotificationCenter.h" />
     <ClInclude Include="Notifications\NotificationQueue.h" />
