--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -122,8 +122,10 @@
     <ClCompile Include="NetWork\IOCPReactor.cpp" />
     <ClCompile Include="NetWork\Packet.cpp" />
     <ClCompile Include="NetWork\PacketList.cpp" />
+    <ClCompile Include="NetWork\NetSession.cpp" />
     <ClCompile Include="NetWork\SessionBase.cpp" />
     <ClCompile Include="NetWork\Socket.cpp" />
+    <ClCompile Include="NetWork\SocketAddr.cpp" />
     <ClCompile Include="Notifications\Notification.cpp" />
     <ClCompile Include="Notifications\NotificationCenter.cpp" />
     <ClCompile Include="Notifications\NotificationQueue.cpp" />
@@ -249,8 +251,10 @@
     <ClInclude Include="NetWork\Packet.h" />
     <ClInclude Include="NetWork\PacketFunction.h" />
     <ClInclude Include="NetWork\PacketList.h" />
+    <ClInclude Include="NetWork\NetSession.h" />
     <ClInclude Include="NetWork\SessionBase.h" />
     <ClInclude Include="NetWork\Socket.h" />
+    <ClInclude Include="NetWork\SocketAddr.h" />
     <ClInclude Include="Notifications\Notification.h" />
     <ClInclude Include="Notifications\NotificationCenter.h" />
     <ClInclude Include="Notifications\NotificationQueue.h" />
