--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -119,8 +119,8 @@
     <ClCompile Include="NetWork\CompleteOperation.cpp" />
     <ClCompile Include="NetWork\EpollReactor.cpp" />
     <ClCompile Include="NetWork\IOCPProactor.cpp" />
-    <ClCompile Include="NetWork\IOCPReactor.cpp" />
     <ClCompile Include="NetWork\NetService.cpp" />
+    <ClCompile Include="NetWork\NetThread.cpp" />
     <ClCompile Include="NetWork\Packet.cpp" />
     <ClCompile Include="NetWork\PacketList.cpp" />
     <ClCompile Include="NetWork\NetSession.cpp" />
@@ -150,6 +150,7 @@
     <ClCompile Include="Thread\RWLock.cpp" />
     <ClCompile Include="Thread\Semaphore.cpp" />
     <ClCompile Include="Thread\Thread.cpp" />
+    <ClCompile Include="Thread\ThreadGroup.cpp" />
     <ClCompile Include="Thread\ThreadLocal.cpp" />
     <ClCompile Include="Thread\ThreadPool.cpp" />
     <ClCompile Include="Thread\ThreadTarget.cpp" />
@@ -243,9 +244,9 @@
     <ClInclude Include="NetWork\CompleteOperation.h" />
     <ClInclude Include="NetWork\EpollReactor.h" />
     <ClInclude Include="NetWork\IOCPProactor.h" />
-    <ClInclude Include="NetWork\IOCPReactor.h" />
     <ClInclude Include="NetWork\NetService.h" />
     <ClInclude Include="NetWork\NetServiceBase.h" />
+    <ClInclude Include="NetWork\NetThread.h" />
     <ClInclude Include="NetWork\Packet.h" />
     <ClInclude Include="NetWork\PacketFunction.h" />
     <ClInclude Include="NetWork\PacketList.h" />
@@ -296,6 +297,7 @@
     <ClInclude Include="Thread\RWLock.h" />
     <ClInclude Include="Thread\Semaphore.h" />
     <ClInclude Include="Thread\Thread.h" />
+    <ClInclude Include="Thread\ThreadGroup.h" />
     <ClInclude Include="Thread\ThreadLocal.h" />
     <ClInclude Include="Thread\ThreadPool.h" />
     <ClInclude Include="Thread\ThreadTarget.h" />
