--- a/work/test/test.vcxproj.filters
+++ b/work/test/test.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="nettest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="nettest.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
